// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Process > $concatenate with calls 1`] = `
{
  "a": [
    "Hi",
    "----",
    "Nice to see you!",
    "----",
    "What time is it?",
    "----",
  ],
}
`;

exports[`Process > $concatenate without calls 1`] = `
{
  "a": [
    1,
    2,
    3,
    4,
    5,
    [
      6,
      7,
    ],
  ],
}
`;

exports[`Process > $csv 1`] = `
{
  "a": [
    {
      "a": 1,
      "b": "a",
      "c": true,
    },
    {
      "a": null,
      "b": "b",
      "c": false,
    },
  ],
}
`;

exports[`Process > $csv with $forEach 1`] = `
{
  "a": [
    {
      "a": "John",
      "b": 30,
    },
    {
      "a": "Jane",
      "b": 28,
    },
  ],
}
`;

exports[`Process > $csv with $json parsing 1`] = `
{
  "a": [
    {
      "foo": "a",
      "jsonField": {
        "foo": true,
      },
    },
    {
      "foo": "b",
      "jsonField": null,
    },
  ],
}
`;

exports[`Process > $csv with absolute path 1`] = `
{
  "a": [
    {
      "a": 1,
      "b": "a",
      "c": true,
    },
    {
      "a": null,
      "b": "b",
      "c": false,
    },
  ],
}
`;

exports[`Process > $csv with interpolated content 1`] = `
{
  "a": [
    {
      "a": 1,
      "b": "a",
      "c": true,
    },
  ],
}
`;

exports[`Process > $csv with relative path 1`] = `
{
  "a": [
    {
      "a": 1,
      "b": "a",
      "c": true,
    },
    {
      "a": null,
      "b": "b",
      "c": false,
    },
  ],
}
`;

exports[`Process > $merge with calls 1`] = `
{
  "a": {
    "a": 3,
    "b": "Hi foo!",
    "c": 3.14,
  },
}
`;

exports[`Process > $merge without calls 1`] = `
{
  "a": {
    "b": 3,
    "c": 4,
  },
}
`;

exports[`Process > $yaml calling parent definitions 1`] = `
{
  "a": {
    "foo": "bar",
  },
}
`;

exports[`Process > $yaml with absolute path 1`] = `
{
  "a": {
    "a": 3,
    "b": {
      "c": "foo",
      "d": 4,
    },
  },
}
`;

exports[`Process > $yaml with array 1`] = `
{
  "a": [
    "foo",
    "bar",
    "baz",
  ],
}
`;

exports[`Process > $yaml with relative path 1`] = `
{
  "a": {
    "a": 3,
    "b": {
      "c": "foo",
      "d": 4,
    },
  },
}
`;

exports[`Process > call 1`] = `
{
  "a": 3,
}
`;

exports[`Process > call shortcut 1`] = `
{
  "a": "Some fixed text",
}
`;

exports[`Process > call shortcut, optional 1`] = `
{
  "a": "Some fixed text",
}
`;

exports[`Process > call shortcut, optional, with invalid name does not throw 1`] = `
{
  "a": undefined,
}
`;

exports[`Process > call with $forEach 1`] = `
{
  "a": [
    "Hello, Pau!",
    "Hello, Théo!",
    "Hello, Sascha!",
    "Hello, Jordi!",
    "Hello, Aleix!",
    "Hello, Guille!",
  ],
}
`;

exports[`Process > call with $forEach and $explode: true 1`] = `
{
  "a": [
    "A1",
    "A2",
    "B1",
    "B2",
    "C1",
    "C2",
  ],
}
`;

exports[`Process > call with $forEach and $explode: true, but call returns an object 1`] = `
{
  "a": [
    "A1",
    "B1",
    "C1",
  ],
}
`;

exports[`Process > call with $forEach and $params 1`] = `
{
  "a": [
    "Hi, Pau!",
    "Hi, Théo!",
  ],
}
`;

exports[`Process > call with params 1`] = `
{
  "a": {
    "result1": 7,
    "result2": {
      "foo": true,
    },
    "result3": "My age is 7",
  },
}
`;

exports[`Process > call, optional 1`] = `
{
  "a": 3,
}
`;

exports[`Process > call, optional, with invalid name does not throw 1`] = `
{
  "a": undefined,
}
`;

exports[`Process > exploded call 1`] = `
{
  "a": [
    1,
    2,
    3,
    4,
    "finished!",
  ],
}
`;

exports[`Process > exploded short call 1`] = `
{
  "a": [
    1,
    2,
    3,
    4,
    "finished!",
  ],
}
`;

exports[`Process > nested call shortcuts 1`] = `
{
  "a": "Final text",
}
`;

exports[`Process > nested calls with params 1`] = `
{
  "a": {
    "result1": 7,
    "result2": 10,
  },
}
`;

exports[`Process > nested interpolation 1`] = `
{
  "a": "Hello world!",
}
`;

exports[`Process > nested shortcut and interpolation 1`] = `
{
  "a": "Hello world!",
}
`;

exports[`Process > removes $definitions 1`] = `
{
  "a": 3,
}
`;

exports[`Process > simple interpolation 1`] = `
{
  "a": {
    "b": "Length: 7 m",
  },
}
`;

exports[`Process > simple interpolation without escapes 1`] = `
{
  "a": {
    "b": "Comparisons < >",
  },
}
`;

exports[`Process > tree with no definitions 1`] = `
{
  "a": {
    "b": {
      "c": 3,
      "d": "foo",
      "e": null,
      "f": true,
      "g": undefined,
    },
    "h": [
      3,
      4,
      "a",
    ],
  },
}
`;
